User service added

--- a/RazorPageProect.CoreLayer/RazorPageProect.CoreLayer.csproj
+++ b/RazorPageProect.CoreLayer/RazorPageProect.CoreLayer.csproj
@@ -10,4 +10,8 @@
       <Folder Include="Utilites\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\RazorPageProect.DataLayer\RazorPageProect.DataLayer.csproj" />
+    </ItemGroup>
+
 </Project>
